@startuml

title __AUTHPACKAGE's Class Diagram__\n

  namespace com.example.airpnp {
    namespace AuthPackage {
      class com.example.airpnp.AuthPackage.Authentication {
          + edEmail : EditText
          + edPassword : EditText
          - mAuth : FirebaseAuth
          + Auth()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + userRegister()
          # onCreate()
          - userLogin()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace AuthPackage {
      class com.example.airpnp.AuthPackage.EmailVerification {
          - btn : Button
          + sendEmailVerification()
          + startEmailVerification()
          # onCreate()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace AuthPackage {
      class com.example.airpnp.AuthPackage.RegisterSecStep {
          ~ addCarBtn : ImageButton
          ~ carName : String
          ~ carNumber : String
          ~ edCarName : EditText
          ~ edCarNumber : EditText
          ~ email : String
          ~ password : String
          ~ phoneNum : String
          ~ sizeItems : ArrayList<SizeItem>
          ~ sizeSpinner : Spinner
          ~ userCarList : ListView
          ~ userCars : ArrayList<UserCar>
          ~ username : String
          - mAuth : FirebaseAuth
          + createUser()
          # onCreate()
          - carEditTextCheck()
          - createUserFireBase()
      }
    }
  }
  

  namespace com.example.airpnp {
    namespace AuthPackage {
      class com.example.airpnp.AuthPackage.RegisterUser {
          ~ backBtn : ImageButton
          ~ infoLayout : LinearLayout
          - edEmail : EditText
          - edName : EditText
          - edPassword : EditText
          - edPhoneNum : EditText
          + createUser()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          - createUserDetails()
      }
    }
  }
  

  com.example.airpnp.AuthPackage.EmailVerification o-- com.example.airpnp.Helper.FirebaseHelper : firebaseHelper
  com.example.airpnp.AuthPackage.RegisterUser o-- com.example.airpnp.UserPackage.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
